[tool.poetry]
name = "hn-front-page-rss"
version = "1.0.0"
description = "Consume daily the best of Hacker News without constantly checking your phone."
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.26.0"
rfeed = "^1.1.1"
selectolax = "^0.3.6"


[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
